# hana

./: .flatpak-manifest.yml  .flatpak.yml  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  snapcraft.yaml
data/: CMakeLists.txt  org.kde.hana.desktop  org.kde.hana.metainfo.xml
data/images/: hana.png.license
po/ar/: hana.po
po/ca/: hana.po
po/ca@valencia/: hana.po
po/cs/: hana.po
po/de/: hana.po
po/es/: hana.po
po/eu/: hana.po
po/fi/: hana.po
po/fr/: hana.po
po/ga/: hana.po
po/he/: hana.po
po/ia/: hana.po
po/it/: hana.po
po/ka/: hana.po
po/ko/: hana.po
po/lt/: hana.po
po/nl/: hana.po
po/pt_BR/: hana.po
po/sk/: hana.po
po/sl/: hana.po
po/sv/: hana.po
po/tr/: hana.po
po/ug/: hana.po
po/uk/: hana.po
po/zh_CN/: hana.po
po/zh_TW/: hana.po
src/: CMakeLists.txt  FilesView.qml  Footer.qml  Main.qml  bridge.cpp  bridge.h  framedecoder.cpp  framedecoder.h  main.cpp  settings.kcfg  worker.cpp  worker.h
src/Components/: AddFilesField.qml  AvoidDarkFramesField.qml  BackgroundField.qml  CMakeLists.txt  ClearFilesField.qml  CloseAppButton.qml  ColumnsField.qml  ImageSaveLocationField.qml  RowsField.qml  RunField.qml  ShowVideoInfoField.qml  SpacingField.qml  ThumbWidthField.qml  VideoInfoAlwaysShowHoursField.qml  VideoInfoBackgroundColorField.qml  VideoInfoTextColorField.qml
